# botwriter

./: .env.example  .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
data/: anti_patterns.py  genre_rules.py  seed.py  seed_posts.py
post_bot/: __init__.py  __main__.py  cli.py  config.py
post_bot/bot/: handlers.py  keyboards.py  messages.py  middleware.py  states.py
post_bot/db/: engine.py  models.py  repository.py
post_bot/llm/: client.py  critic.py  feedback_extractor.py  planner.py  prompts.py  stt.py  stylist.py  writer.py
post_bot/pipeline/: orchestrator.py  style_retrieval.py
post_bot/utils/: logger.py
tests/: conftest.py  test_client_parse_json.py  test_critic_on_seed_posts.py  test_critic_rejects_bad_post.py  test_pipeline_smoke.py
