[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "post-draft-bot"
version = "0.1.0"
description = "TG-бот: тезисы и голосовые → авторский черновик поста"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.13,<4.0",
    "openai>=1.40,<2.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.20",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
post-bot = "post_bot.__main__:main"

[tool.setuptools.packages.find]
include = ["post_bot*", "data*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
